(WIP) Working on hiding the side navbar scrollbar. Moved webkit scrollbar corner class to the top of styles.css. index.js - fixed the alt texts for the side navbar icons.
Custom webkit scrollbar solution does not work on the Firefox.

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
     min-width: 0;
 }
 
+::-webkit-scrollbar-corner {
+    display: none;
+}
+
 /* Centers it's content */
 .wrapper {
     display: flex;
@@ -172,15 +176,17 @@ body {
     display: block;
 }
 
-/* Custom scrollbar for the code side-navbar: */
+/* Custom scrollbar for the side-navbar: */
 .side-navbar::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 8px;
+    /* width: 8px; */
+    width: 0px;
 }
 
 .side-navbar::-webkit-scrollbar:horizontal {
     -webkit-appearance: none;
-    height: 8px;
+    /* height: 8px; */
+    height: 0px;
 }
 
 .side-navbar::-webkit-scrollbar-thumb {
@@ -430,10 +436,6 @@ body {
     border-radius: 10px;
     background-color: #d7d8d795;
     -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-}
-
-::-webkit-scrollbar-corner {
-    display: none;
 }
 
 /* Colors for the code styling resembling default Visual Studio: */
